--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="src/styles.css">
 </head>
 
 <body>
-	<div id="app"></div>
+	<section>
+		<h1 id="text-anime">HELLO WOLRD</h1>
+	</section>
 
 	<script src="src/index.js">
 	</script>
